update some spacing issues with the theme

--- a/css/res.css
+++ b/css/res.css
@@ -3,6 +3,10 @@
   color:#444 !important;
   }
 
+.linkflair-modpost .newComments {
+  color:#cfb !important;
+  }
+
 #userbarToggle {
   color: #FFB100 !important;
   background-color: #1D1D1D !important;
