--- a/css/sidebar.scss
+++ b/css/sidebar.scss
@@ -270,11 +270,6 @@ form.toggle.flairtoggle, form.toggle.leavemoderator-button {
   line-height: 17px !important;
 }
 
-.drop-choices a.choice:hover {
-  background: #36200E;
-  color: #FFFFFF;
-}
-
 div.subbuttons {
   padding-top: 10px;
 }
