--- a/css/threads.scss
+++ b/css/threads.scss
@@ -7,6 +7,7 @@
   z-index:auto;
   background:rgba(212,212,212,0.35);
   border-bottom:1px solid #999;
+  padding-bottom:1.6em;
 }
 #siteTable .thing:last-child {
  border-bottom:0;
@@ -111,11 +112,11 @@ padding: 15px 10px 10px 40px;}
 .expando-button.selftext.collapsed, .expando-button.selftext.expanded:hover {background-position: -0px -31px;}
 .expando-button.selftext.collapsed:hover, .expando-button.selftext.expanded {background-position: -0 0;}
 .expando-button.video.collapsed, .expando-button.video.expanded:hover       {background-position: -0px -93px;}
-.expando-button.video.collapsed:hover, .expando-button.video.expanded       {background-position: -0px -82px;}
+.expando-button.video.collapsed:hover, .expando-button.video.expanded       {background-position: -0px -62px;}
 .expando-button.video-muted.collapsed, .expando-button.video-muted.expanded:hover       {background-position: -0px -93px;}
 .expando-button.video-muted.collapsed:hover, .expando-button.video-muted.expanded       {background-position: -0px -62px;}
-.expando-button.image, .expando-button.image.expanded:hover                 {background-position: -0px -129px !important;}
-.expando-button.image:hover, .expando-button.image.expanded                 {background-position: -0px -160px !important;}
+.expando-button.image, .expando-button.image.expanded:hover                 {background-position: -0px -160px !important;}
+.expando-button.image:hover, .expando-button.image.expanded                 {background-position: -0px -129px !important;}
 .expando-button.gallery, .expando-button.gallery.expanded:hover             {background-position: -0px -224px !important;}
 .expando-button.gallery:hover, .expando-button.gallery.expanded             {background-position: -0px -193px !important;}
 
